--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Notes &amp; Writing</title>
+<title>Notes &amp; Writing –</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -132,7 +132,7 @@ window.Quarto = {
 };
 </script>
 
-</head>
+<link rel="alternate" type="application/rss+xml" title=" " href="blog.xml" data-external="1"></head>
 
 <body class="nav-fixed quarto-light">
 
@@ -140,6 +140,11 @@ window.Quarto = {
   <header id="quarto-header" class="headroom fixed-top">
     <nav class="navbar navbar-expand-lg " data-bs-theme="dark">
       <div class="navbar-container container-fluid">
+      <div class="navbar-brand-container mx-auto">
+    <a class="navbar-brand" href="./index.html">
+    <span class="navbar-title"></span>
+    </a>
+  </div>
             <div id="quarto-search" class="" title="Search"></div>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" role="menu" aria-expanded="false" aria-label="Toggle navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">
   <span class="navbar-toggler-icon"></span>
@@ -210,7 +215,7 @@ window.Quarto = {
     </div>
 </div>
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-listing-date-sort="1763769600000" data-listing-file-modified-sort="1769602324278" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2" data-listing-word-count-sort="268">
+<div class="quarto-post image-right" data-index="0" data-listing-date-sort="1769817600000" data-listing-file-modified-sort="1769861328766" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2" data-listing-word-count-sort="268">
 <div class="body">
 <h3 class="no-anchor listing-title">
 <a href="./posts/blog_posts/Emacs_font_spacing.html" class="no-external">Line spacing in Emacs by making a new font</a>
@@ -222,7 +227,7 @@ Emacs does not have a native way in which to increase the line spacing across al
 <div class="metadata">
 <a href="./posts/blog_posts/Emacs_font_spacing.html" class="no-external">
 <div class="listing-date">
-Nov 22, 2025
+Jan 31, 2026
 </div>
 </a>
 </div>
