added resources page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>quarto-inputa29be2e1602fb069</title>
+<title>quarto-inputef975db7eaadff9</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -162,7 +162,11 @@ window.Quarto = {
   </li>  
   <li class="nav-item">
     <a class="nav-link" href="./blog.html"> 
-<span class="menu-text">/notes &amp; writing/</span></a>
+<span class="menu-text">/notes/</span></a>
+  </li>  
+  <li class="nav-item">
+    <a class="nav-link" href="./resources.html"> 
+<span class="menu-text">/resources/</span></a>
   </li>  
   <li class="nav-item">
     <a class="nav-link" href="./publications.html"> 
