--- a/teaching.html
+++ b/teaching.html
@@ -102,7 +102,11 @@ ul.task-list li input[type="checkbox"] {
   </li>  
   <li class="nav-item">
     <a class="nav-link" href="./blog.html"> 
-<span class="menu-text">/notes &amp; writing/</span></a>
+<span class="menu-text">/notes/</span></a>
+  </li>  
+  <li class="nav-item">
+    <a class="nav-link" href="./resources.html"> 
+<span class="menu-text">/resources/</span></a>
   </li>  
   <li class="nav-item">
     <a class="nav-link" href="./publications.html"> 
