--- a/blog.html
+++ b/blog.html
@@ -163,7 +163,11 @@ window.Quarto = {
   </li>  
   <li class="nav-item">
     <a class="nav-link active" href="./blog.html" aria-current="page"> 
-<span class="menu-text">/notes &amp; writing/</span></a>
+<span class="menu-text">/notes/</span></a>
+  </li>  
+  <li class="nav-item">
+    <a class="nav-link" href="./resources.html"> 
+<span class="menu-text">/resources/</span></a>
   </li>  
   <li class="nav-item">
     <a class="nav-link" href="./publications.html"> 
