--- a/resources.html
+++ b/resources.html
@@ -147,10 +147,15 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<p>This is a collection of some bits an peices I have made for teaching and workshops. I’ve left them all here in the hope that they are of use :)</p>
+<p>This is a collection of some bits an pieces I have made for teaching and workshops. I’ve left them all here in the hope that they might of use :)</p>
 <p><strong>=====</strong></p>
-<p>A very quick introduction to QGIS and OpenStreetMap for our <a href="https://warwickcim.github.io/Inclusive_Cartographies_Workshop/">Inclusive Cartographies Workshop</a></p>
-<p>Some notes on working with <a href="http://timothymonteath.space/exif">EXIF data and images</a> in R for <a href="https://warwick.ac.uk/fac/cross_fac/cim/apply-to-study/cross-disciplinary-postgraduate-modules/im946-advanced-visualisation-labs/">IM946</a></p>
+<p>A very quick introduction to QGIS and OpenStreetMap for our <a href="https://warwickcim.github.io/Inclusive_Cartographies_Workshop/">Inclusive Cartographies Workshop</a><br>
+<br>
+<br>
+Notes on working with <a href="http://timothymonteath.space/exif">EXIF data and images</a> in R for <a href="https://warwick.ac.uk/fac/cross_fac/cim/apply-to-study/cross-disciplinary-postgraduate-modules/im946-advanced-visualisation-labs/">IM946</a><br>
+<br>
+<br>
+<a href="http://timothymonteath.space/images">Some fun playing around</a> with EXIF metadata and plotting images for <a href="https://warwick.ac.uk/fac/cross_fac/cim/apply-to-study/cross-disciplinary-postgraduate-modules/im946-advanced-visualisation-labs/">IM946</a></p>
 
 
 
